--- a/src/main/webapp/Kreditrechner.tml
+++ b/src/main/webapp/Kreditrechner.tml
@@ -13,29 +13,29 @@
 <div id="content">
 <p>Berechnung der Rate und Laufzeit eines Kredits</p>
 
-<p class="errormessage"><span jwcid="@Insert" value="ognl: errorMessage">Fehler</span></p>
+<p class="errormessage">${errorMessage}</p>
 
 <div class="controlpanel">
-<form jwcid="@Form" listener="listener:calculate">
+<t:form t:id="calculate">
 <table>
 <tr>
-<td>Betrag:</td><td><input jwcid="@TextField" value="ognl:betrag" style="width:150px;"/></td>
+<td>Betrag:</td><td><t:textfield value="betrag" validate="min=1" style="width:150px;" /></td>
 </tr>
 <tr>
-<td>Zins:</td><td><input jwcid="@TextField" value="ognl:zins" style="width:150px;"/></td>
+<td>Zins:</td><td><t:textfield value="zins" validate="min=0,max=1" style="width:150px;" /></td>
 </tr>
 <tr>
-<td>Tilgung:</td><td><input jwcid="@TextField" value="ognl:tilgung" style="width:150px;"/></td>
+<td>Tilgung:</td><td><t:textfield value="tilgung" validate="min=0,max=1" style="width:150px;" /></td>
 </tr>
 <tr>
-<td>zeige Zwischenschritte:</td><td><input jwcid="@Checkbox" value="ognl:showResult" /></td>
+<td>zeige Zwischenschritte:</td><td><t:checkbox value="showResult" /></td>
 </tr>
 </table>
-<input type="submit" jwcid="@Submit" value="Starte Berechnung" />
-</form>
+<t:submit value="Starte Berechnung" />
+</t:form>
 </div>
 
-<span jwcid="@If" condition="ognl: kreditrechner != null">
+<t:if test="startKreditrechner">
 <p class="infomessage">
 	Startbetrag: <span jwcid="@Insert" value="ognl: kreditrechner.start">100000</span>€; <br />
 	Zins: <span jwcid="@Insert" value="ognl: convertToPercent( kreditrechner.zins )">5.0</span> (<span jwcid="@Insert" value="ognl: convertToPercent( kreditrechner.tilgung )">1.0</span> Tilgung); <br />
@@ -54,7 +54,7 @@
 	Kredit ist getilgt nach <span jwcid="@Insert" value="ognl: kreditrechner.count">vielen</span> Monaten (=<span jwcid="@Insert" value="ognl: convertToNumber(kreditrechner.count/12.0)">12</span> Jahre). <br />
 	Insgesamt bezahlt: <span jwcid="@Insert" value="ognl: convertToCurrency( kreditrechner.bezahlt )">10000</span> <br />
 </p>
-</span>
+</t:if>
 </div>
 
 <div id="sidebar">
