--- a/src/main/webapp/Kreditrechner.tml
+++ b/src/main/webapp/Kreditrechner.tml
@@ -19,13 +19,13 @@
 <t:form t:id="calculate">
 <table>
 <tr>
-<td>Betrag:</td><td><t:textfield value="betrag" validate="min=1" style="width:150px;" /></td>
+<td>Betrag:</td><td><t:textfield value="kreditRechner.start" validate="min=1" style="width:150px;" /></td>
 </tr>
 <tr>
-<td>Zins:</td><td><t:textfield value="zins" validate="min=0,max=1" style="width:150px;" /></td>
+<td>Zins:</td><td><t:textfield value="kreditRechner.zins" validate="min=0,max=1" style="width:150px;" /></td>
 </tr>
 <tr>
-<td>Tilgung:</td><td><t:textfield value="tilgung" validate="min=0,max=1" style="width:150px;" /></td>
+<td>Tilgung:</td><td><t:textfield value="kreditRechner.tilgung" validate="min=0,max=1" style="width:150px;" /></td>
 </tr>
 <tr>
 <td>zeige Zwischenschritte:</td><td><t:checkbox value="showResult" /></td>
@@ -58,7 +58,7 @@
 </div>
 
 <div id="sidebar">
-<p><a jwcid="@PageLink" page="KreditrechnerPage">Reset</a></p>
+<p><t:actionlink t:id="reset">Reset</t:actionlink></p>
 <p>controls</p>
 </div>
 
