Ausgabe des Endergebnisses mit Tapestry 5
git-svn-id: http://wikiserver/svn/littlehelper/trunk@669 0d842271-ca0e-0410-b7f0-83f617a2c6fd

--- a/src/main/webapp/Kreditrechner.tml
+++ b/src/main/webapp/Kreditrechner.tml
@@ -51,8 +51,8 @@
 </div>
 
 <p>	
-	Kredit ist getilgt nach <span jwcid="@Insert" value="ognl: kreditrechner.count">vielen</span> Monaten (=<span jwcid="@Insert" value="ognl: convertToNumber(kreditrechner.count/12.0)">12</span> Jahre). <br />
-	Insgesamt bezahlt: <span jwcid="@Insert" value="ognl: convertToCurrency( kreditrechner.bezahlt )">10000</span> <br />
+	Kredit ist getilgt nach ${kreditrechner.count} Monaten (=${convertToYear(kreditrechner.count)} Jahre). <br />
+	Insgesamt bezahlt: ${convertToCurrency( kreditrechner.bezahlt )}€ <br />
 </p>
 </t:if>
 </div>
