--- a/src/main/webapp/Index.tml
+++ b/src/main/webapp/Index.tml
@@ -1,5 +1,9 @@
-<t:border  xmlns:t="http://tapestry.apache.org/schema/tapestry_5_1_0.xsd" xmlns:p="tapestry:parameter">
+<t:border  xmlns:t="http://tapestry.apache.org/schema/tapestry_5_1_0.xsd" xmlns:p="tapestry:parameter" sidebar="sidebar">
 
 <p>'Little Helper' ist eine Sammlung nützlicher kleiner Werkzeuge.</p>
+
+<t:block t:id="sidebar">
+    <p><t:actionlink t:id="myip">IP Detektor</t:actionlink></p>
+</t:block>
 
 </t:border>
