--- a/src/main/webapp/css/littlehelper.css
+++ b/src/main/webapp/css/littlehelper.css
@@ -1,4 +1,4 @@
-* { padding:0px; margin:0px; }
+* { padding:0; margin:0; }
 
 body { 
 	background-color: #e0e0db; 
@@ -8,14 +8,14 @@ body {
 }
 
 #wrap {
-	width: 760px;
+	width: 1060px;
 	margin: 0 auto;
 	padding: 4px;
 	text-align: left;
 }
 
 #header {
-	width: 760px;
+	width: 1060px;
 	height: 80px;
 	float: left;
 	text-align: right;
@@ -23,7 +23,7 @@ body {
 }
 
 #navigation {
-	width: 760px;
+	width: 1060px;
 	height: 40px;
 	float: left;
 	border-top: 1px solid #999;
@@ -34,19 +34,29 @@ body {
 #navigation ul {
 	display: inline-block;
 	list-style-type: none;
+	padding-top: 0.5em;
 }
 
 #navigation li {
-	display: inline-block;
+	display: inline;
 	margin: 0.5em;
 	padding-right: 0.5em;
 }
 
 #content {
-	width: 559px;
+	width: 859px;
 	height: 400px;
 	float: left;
 	border-right: 1px solid #999;
+}
+
+#content ul {
+	margin-left: 3em;
+}
+
+#content ul p {
+	margin-top: 1em;
+	margin-left: 0;
 }
 
 #sidebar {
