--- a/src/main/webapp/css/jetspeed1.css
+++ b/src/main/webapp/css/jetspeed1.css
@@ -20,6 +20,12 @@
 	margin-left: 4px;
 }
 
+#content h2 {
+	color: #000000;
+	text-decoration: none;
+	margin-left: 0;	
+}
+
 #content p {
 	margin-top: 0;
 }
