--- a/src/main/webapp/Index.tml
+++ b/src/main/webapp/Index.tml
@@ -4,6 +4,7 @@
 
 <t:block t:id="sidebar">
     <p><t:actionlink t:id="myip">IP Detektor</t:actionlink></p>
+    <p><a href="svgcounter.png">SVG Counter</a></p>
 </t:block>
 
 </t:border>
