Stabilisierung der Repository-Initialisierung inkl. Logging
git-svn-id: http://wikiserver/svn/littlehelper/trunk@800 0d842271-ca0e-0410-b7f0-83f617a2c6fd

--- a/src/main/webapp/SvnAnalyzer.tml
+++ b/src/main/webapp/SvnAnalyzer.tml
@@ -16,16 +16,16 @@
 	<t:alerts />
 
 	<t:zone t:id="repositoryZone" id="repositoryZone" t:visible="false">
-	<t:progressivedisplay t:id="repositoryLoader" update="blindup">
+	<t:progressivedisplay t:id="repositoryLoader" update="blindup"><t:if test="repositoryInitialized">
 	  
-		<p>Aktuelles Repository: ${repository.repositoryUrl}</p>
-		<p>Uuid: ${repository.repositoryUUID}; Latest Revision: ${repository.latestRevision}</p>
+		<p>Aktuelles Repository: ${repositoryRoot}</p>
+		<p>Uuid: ${repositoryUUID}; Latest Revision: ${latestRevision}</p>
 		
-	</t:progressivedisplay>
+	</t:if></t:progressivedisplay>
 	</t:zone>
 
 <t:block t:id="sidebar">
-    <p>Hier ist Platz für globale Controls.</p>
+    <p><t:actionlink t:id="reset">Reset</t:actionlink></p>
 </t:block>
 
 </t:border>
