Diff-Ansicht aus SvnAnalyzer übernommen
git-svn-id: http://wikiserver/svn/littlehelper/trunk@802 0d842271-ca0e-0410-b7f0-83f617a2c6fd

--- a/src/main/webapp/SvnAnalyzer.tml
+++ b/src/main/webapp/SvnAnalyzer.tml
@@ -48,6 +48,9 @@
 			</t:if>
 		
 			<p><t:zone t:id="diffZone" id="diffZone" t:visible="false" style="height:300px; overflow:scroll; font-size:75%; border:1px dotted gray; padding:1em;">
+			<t:progressivedisplay t:id="diffLoader" t:context="[changedPathType,changedPathPath]" update="blindup">
+			<t:if test="diffOutput"><pre>${diffOutput}</pre></t:if>
+			</t:progressivedisplay>	
 			</t:zone></p>
 
 		</t:progressivedisplay>
