MediawikiScanner: Löschstatus erkennen und anzeigen
git-svn-id: http://wikiserver/svn/littlehelper/trunk@805 0d842271-ca0e-0410-b7f0-83f617a2c6fd

--- a/src/main/webapp/MediawikiScanner.tml
+++ b/src/main/webapp/MediawikiScanner.tml
@@ -21,7 +21,11 @@
 		<p>Aktuelles Wiki: <strong>${wikiTitle}</strong></p>
 		
 		<div class="resultpanel" id="resultpanel"><t:loop t:source="analysis" t:value="revision">
-		<p class="line">Revision ${revision.revisionNumber}: <strong>${revision.title}</strong></p>		
+		<t:unless test="revision.deleted">
+			<p class="line">Revision ${revision.revisionNumber}: <strong>${revision.title}</strong></p>
+			<p class="subline">${revision.info}</p>
+			<p:else><p class="line">Revision ${revision.revisionNumber} wurde gelöscht.</p></p:else>
+		</t:unless>
 		</t:loop></div>
 		
 	</t:if></t:progressivedisplay>
