--- a/src/main/webapp/css/littlehelper.css
+++ b/src/main/webapp/css/littlehelper.css
@@ -75,7 +75,6 @@ p, div.controlpanel {
 
 p.line {
 	margin: 6px;
-	font-size: 10px;	
 }
 
 p.subline {
@@ -83,11 +82,17 @@ p.subline {
 	font-size: 8px;	
 }
 
+.t-zone {
+	width: 90%;
+	background-color: #e0e0db;
+}
+
 div.resultpanel {
 	margin: 15px 20px;
-	width: 75%;
-	height: 200px;
+	width: 100%;
+	height: 250px;
 	overflow: auto;
+	font-size: 11px;
 }
 
 div.resultpanel table {
