Beispiel für Cache Manifest
git-svn-id: http://wikiserver/svn/littlehelper/trunk@914 0d842271-ca0e-0410-b7f0-83f617a2c6fd

--- a/src/main/webapp/Index.tml
+++ b/src/main/webapp/Index.tml
@@ -4,6 +4,7 @@
 
 <t:block t:id="sidebar">
     <p><t:actionlink t:id="myip">IP Detektor</t:actionlink></p>
+    <p><t:actionlink t:id="manifest">Cache Manifest</t:actionlink></p>
 </t:block>
 
 </t:border>
