--- a/src/main/webapp/css/littlehelper.css
+++ b/src/main/webapp/css/littlehelper.css
@@ -53,7 +53,7 @@ body {
 	margin-left: 3em;
 }
 
-#content ul p {
+#content ul p, #content ul fieldset {
 	margin-top: 1em;
 	margin-left: 0;
 }
@@ -69,7 +69,7 @@ h1, h2, h3, h4, h5, h6 {
 	margin: 20px;
 }
 
-p, div.controlpanel {
+p, fieldset, div.controlpanel {
 	margin: 15px 20px;
 }
 
